[package]
name = "bittrex"
version = "0.6.1"
authors = [
  "Razican <razican@protonmail.ch>"
]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/Razican/bittrex-rs"
homepage = "https://bittrex.com/"
documentation = "https://docs.rs/bittrex/"
description = """\
Bittrex API bindings for Rust.
"""
readme = "README.md"
keywords = ["bittrex", "bitcoin", "API", "exchange"]

[badges]
travis-ci = { repository = "Razican/bittrex-rs", branch = "master" }
codecov = { repository = "Razican/bittrex-rs", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "Razican/bittrex-rs" }
is-it-maintained-open-issues = { repository = "Razican/bittrex-rs" }
maintenance = { status = "passively-maintained" }

[dependencies]
sha2 = "0.8.1"
hmac = "0.7.1"
serde = { version = "1.0.104", features = ["derive"] }
hex = "0.4.0"
anyhow = "1.0.26"
once_cell = "1.3.1"
reqwest = { version = "0.10.1", features = ["blocking", "json"] }
getset = "0.0.9"

[dependencies.chrono]
version = "0.4.10"
features = ["serde"]

[dev-dependencies]
dotenv = "0.15.0"
