[package]
name = "bittrex"
version = "0.8.0"
authors = [
  "Razican <razican@protonmail.ch>"
]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/Razican/bittrex-rs"
homepage = "https://bittrex.com/"
documentation = "https://docs.rs/bittrex/"
description = """\
Bittrex API bindings for Rust.
"""
readme = "README.md"
keywords = ["bittrex", "bitcoin", "API", "exchange"]

[badges]
travis-ci = { repository = "Razican/bittrex-rs", branch = "master" }
codecov = { repository = "Razican/bittrex-rs", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "Razican/bittrex-rs" }
is-it-maintained-open-issues = { repository = "Razican/bittrex-rs" }
maintenance = { status = "passively-maintained" }

[dependencies]
sha2 = "0.9.1"
hmac = "0.9.0"
serde = { version = "1.0.116", features = ["derive"] }
hex = "0.4.2"
anyhow = "1.0.32"
once_cell = "1.4.1"
ureq = { version = "1.4.1", features = ["json"] }
getset = "0.1.1"

[dependencies.chrono]
version = "0.4.18"
default-features = false
features = ["std", "clock", "serde"]

[dev-dependencies]
dotenv = "0.15.0"
